[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Thrower.gd" type="Script" id=1]
[ext_resource path="res://Assets/pixelfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/throw_bg.png" type="Texture" id=3]
[ext_resource path="res://Scenes/throw_fruit.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/hoop.png" type="Texture" id=5]
[ext_resource path="res://Assets/hoop2.png" type="Texture" id=6]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 1 )

[sub_resource type="RectangleShape2D" id=2]

[node name="Thrower" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="hoop" type="Sprite" parent="."]
position = Vector2( 0, -25 )
texture = ExtResource( 5 )

[node name="hoop2" type="Sprite" parent="hoop"]
visible = false
z_index = 1
texture = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="hoop"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hoop/Area2D"]
position = Vector2( 0, 4 )
shape = SubResource( 1 )
one_way_collision_margin = 5.0

[node name="fruit_node" type="Node2D" parent="."]
position = Vector2( 0, 36 )

[node name="throw_fruit" parent="fruit_node" instance=ExtResource( 4 )]

[node name="thrown" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, 36 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="spawn_fruit" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="hoop_show" type="Timer" parent="."]
wait_time = 0.5

[node name="Score" type="Label" parent="."]
margin_left = -25.0
margin_top = -46.0
margin_right = -13.0
margin_bottom = -38.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="hoop/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="timeout" from="spawn_fruit" to="." method="_on_spawn_fruit_timeout"]
[connection signal="timeout" from="hoop_show" to="." method="_on_hoop_show_timeout"]
